--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,23 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="icon" href="<%= BASE_URL %>favicon.png">
+
 		<title>The Spec</title>
+		<meta property="og:url" content="https://spec.willand.co">
+		<meta property="fb:app_id" content="2105326509594267">
+		<meta property="og:site_name" content="The Spec">
+		<meta name="description" content="A spec for ethical software">
+		<meta name="author" content="Will Anderson">
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@31WA">
+		<meta name="twitter:title" content="The Spec">
+		<meta property="og:title" content="The Spec">
+		<meta name="twitter:description" content="A spec for ethical software">
+		<meta property="og:description" content="A spec for ethical software">
+		<meta name="twitter:image" content="https://spec.willand.co/favicon.png">
+		<meta property="og:image" content="https://spec.willand.co/favicon.png">
+		<meta property="og:type" content="website">
+
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
 	</head>
